[gd_scene load_steps=6 format=3 uid="uid://dbs3cy45tjss3"]

[ext_resource type="Texture2D" uid="uid://vbwrtvdvwwkc" path="res://icon.svg" id="1_7cr3t"]
[ext_resource type="Script" path="res://Scripts/WoodGather.gd" id="2_1jj52"]
[ext_resource type="Resource" uid="uid://dh0g70vbch5gk" path="res://Resources/Materials/Wood.tres" id="3_ah7s2"]
[ext_resource type="Script" path="res://Scripts/MaterialComponent.gd" id="4_556i7"]
[ext_resource type="Script" path="res://Scripts/UpgradeLabel.gd" id="6_t1we8"]

[node name="WoodGather" type="Button"]
offset_left = 1101.0
offset_top = 157.0
offset_right = 1237.0
offset_bottom = 339.0
text = "Gather Wood"
icon = ExtResource("1_7cr3t")
icon_alignment = 1
vertical_icon_alignment = 0
script = ExtResource("2_1jj52")
GatherMaterial = ExtResource("3_ah7s2")

[node name="MaterialComponent" type="Node2D" parent="." node_paths=PackedStringArray("timer")]
position = Vector2(-830, -22)
script = ExtResource("4_556i7")
timer = NodePath("../Timer")
timeToIncrease = 10.0
baseAmount = 1

[node name="Timer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="UpgradeButton" type="Button" parent="."]
visible = false
layout_mode = 0
offset_left = 3.0
offset_top = 217.0
offset_right = 128.0
offset_bottom = 248.0
text = "Increase Speed"

[node name="BuildingLabel" type="Label" parent="."]
visible = false
layout_mode = 0
offset_left = 8.0
offset_top = 259.0
offset_right = 48.0
offset_bottom = 282.0
text = "Test"
script = ExtResource("6_t1we8")

[connection signal="pressed" from="." to="." method="_on_pressed"]
[connection signal="mouse_entered" from="UpgradeButton" to="BuildingLabel" method="_on_upgrade_button_mouse_entered"]
[connection signal="mouse_exited" from="UpgradeButton" to="BuildingLabel" method="_on_upgrade_button_mouse_exited"]
[connection signal="pressed" from="UpgradeButton" to="MaterialComponent" method="_on_upgrade_button_pressed"]
